--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -20,8 +20,8 @@
                 <p><strong>Email:</strong> {{ booking.User.email }}</p>
                 <p><strong>From:</strong> {{ booking.Journey.departure_city }}</p>
                 <p><strong>To:</strong> {{ booking.Journey.arrival_city }}</p>
-                <p><strong>Departure Time:</strong> {{ booking.Journey.departure_time }}</p>
-                <p><strong>Arrival Time:</strong> {{ booking.Journey.arrival_time }}</p>
+                <p><strong>Departure Time:</strong> {{ booking.JourneySlot.departure_time.strftime('%H:%M') }}</p>
+                <p><strong>Arrival Time:</strong> {{ booking.JourneySlot.arrival_time.strftime('%H:%M') }}</p>
                 <p><strong>Travel Date:</strong> {{ booking.Booking.travel_date }}</p>
                 <p><strong>Seat Type:</strong> {{ booking.SeatType.type_name }}</p>
                 <p class="total-price"><strong>Total Price:</strong> £{{ booking.Booking.final_price }}</p>
