--- a/templates/admin_bookings.html
+++ b/templates/admin_bookings.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Admin - All Booking</title>
+    <title>Admin - All Bookings</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
